<resources>
    <string name="app_name">AlarmApp</string>

    <string name="img_day_or_night">Toolbar Image</string>
    <string name="fab_add_new_alarm">Set New Alarm</string>
    <string name="tv_next_alarm">Next Alarm at: Mon 15:15</string>
    <string name="alarm_time">15:15</string>
    <string name="tv_set_new_alarm">Set New Alarm</string>
    <string name="tv_alarm_time_text">Choose Time:</string>
    <string name="monday">MO</string>
    <string name="thursday">TH</string>
    <string name="saturday">SA</string>
    <string name="wednesday">WE</string>
    <string name="sunday">SU</string>
    <string name="friday">FR</string>
    <string name="tuesday">TU</string>
    <string name="btn_set_alarm">Set Alarm</string>
    <string name="btn_cancel_and_close"><![CDATA[Cancel & Close]]></string>
    <string name="enter_alarm_name">Enter Alarm Name</string>
    <string name="alarm_name">Label:</string>
    <string name="repeat">Repeat</string>
    <string name="new_alarm_name">New Alarm</string>
    <string name="alarm_set_for">Alarm Set For:</string>
    <string name="action">Action</string>
    <string name="delete_alarm">Delete</string>
    <string name="delete_all_alarm">Delete All</string>
    <string name="edit_alarm">Edit</string>
    <string name="three_vertical_dots">⋮</string>
    <string name="tv_no_alarms_text">No Scheduled Alarms. Use the add button below to add new alarm.</string>
    <string name="dismiss">Dismiss</string>
    <string name="snooze">Snooze</string>
</resources>